--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -4,5 +4,28 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "AzureAd": {
+    "TenantId": "f247d2a1-9385-4d69-9bd7-1282acb65d0e",
+    "ClientId": "8c4af812-0177-4d1a-b577-2fc7ca09e18a",
+    "ClientSecret": "SNI8Q~Kvu4fJaPuOTKID5IJNICxwY1tLnqxWRaT_"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "SenderEmail": "rajaayush596@gmail.com",
+    "SenderPassword": "hyix fpbp umem lvas",
+    "SenderName": "Ayush"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_SUPER_LONG_RANDOM_SECRET_KEY_123456789",
+    "Issuer": "SupplierPortal",
+    "Audience": "SupplierPortalUsers"
+  },
+
+  "AllowedHosts": "*"
 }
