--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Graph" Version="5.99.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.79.2" />
     <PackageReference Include="Npgsql" Version="10.0.1" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
