changes for configs

--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -22,7 +22,7 @@
     "SenderName": "Ayush"
   },
   "SendGrid": {
-    "ApiKey": "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",
+    "ApiKey": "",
     "FromEmail": "rajaayush596@gmail.com",
     "FromName": "Supplier Portal"
   },
