--- a/Presentation/appsettings.Development.json
+++ b/Presentation/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=localhost;Port=5433;Database=Supplier Portal;Username=postgres;Password=Aayush01"
   },
   "AzureAd": {
     "TenantId": "f247d2a1-9385-4d69-9bd7-1282acb65d0e",
@@ -22,7 +22,7 @@
     "SenderName": "Ayush"
   },
   "SendGrid": {
-    "ApiKey": "",
+    "ApiKey": "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",
     "FromEmail": "rajaayush596@gmail.com",
     "FromName": "Supplier Portal"
   },
