--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -35,10 +35,11 @@
 <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
-    <ItemGroup>
-    <Content Include="EmailTemplates/**/*.html">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+   <ItemGroup>
+  <Content Include="EmailTemplates/**">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
+
 
 </Project>
